--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.27.1</version>
+		</dependency>
+
 	</dependencies>
 
 
